load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jwtutils",
    srcs = ["verify.go"],
    importpath = "github.com/cockroachdb/security-utils/jwtutils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/lestrrat-go/jwx/jwk",
        "//vendor/github.com/lestrrat-go/jwx/jwt",
    ],
)

go_test(
    name = "jwtutils_test",
    srcs = ["verify_test.go"],
    embed = [":jwtutils"],
    deps = ["//vendor/github.com/stretchr/testify/require"],
)
